<resources>
    <string name="app_name">MAI</string>
    <string name="app_v">2.0</string>

    <!-- Системные штуки -->
    <string name="errorLoading">Опс, при загрузке произошла ошибка</string>
    <string name="errorLoadingText">Повторить</string>

    <!-- Navigation -->
    <string name="info_navigation">Инфо</string>
    <string name="exams_navigation">Экзамены</string>
    <string name="timetable_navigation">Расписание</string>
    <string name="settings_navigation">Настройки</string>

    <!-- Start Fragment and Flow -->
    <string name="start_timetable">Расписание</string>
    <string name="start_description">Простматривайте свое расписание, узнавайте новости и находите интересующие вас события полностью офлайн. Найдите интересные вам увлечения.</string>
    <string name="start_button">Выбрать учебную группу</string>
    <string name="start_skip">Пропустить</string>

    <string name="select_group_title">Выберите свою группу</string>
    <string name="select_group_hint">Ваша группа</string>
    <string name="select_group_search">Ваша группа</string>
    <string name="select_group_level">Курс %1$d</string>

    <!-- Info Fragment -->
    <string name="info_title">МАИ</string>
    <string name="info_app_title">Интересное</string>
    <string name="info_button_adv">Доска объявлений</string>
    <string name="info_button_news">Новости приложения</string>
    <string name="info_campus_title">Кампус</string>
    <string name="info_life_title">Жизнь</string>
    <string name="info_button_lectors">Расписание преподавателей</string>
    <string name="info_button_map">Схема кампуса</string>
    <string name="info_button_canteen">Столовые и буфеты</string>
    <string name="info_button_library">Библиотеки</string>
    <string name="info_button_sport">Спортивные секции</string>
    <string name="info_button_students">Студенческие организации</string>
    <string name="info_button_creative">Творческие коллективы</string>
    <string name="info_alert_message">Если вы заметили ошибку в информации, которая размещена в этом разделе, то пишите в поддержку, и мы все исправим. </string>

    <string name="info_search_lector_title">Поиск преподавателя</string>
    <string name="info_search_lector_placeholder">Имя, фамилия или отчество</string>
    <string name="info_lector_schedule_empty">%1$s у выбранного преподавателя нет занятий.</string>
    <string name="info_lector_schedule_today">Сегодня</string>
    <string name="info_lector_schedule_header">Ниже показаны пары которое мы нашли для преподавателя</string>
    <string name="info_lector_schedule_header_bottom">на %1$s</string>
    <string name="info_lector_schedule_button">Посмотреть другие дни</string>
    <string name="info_lector_schedule_calendar">Выбор даты</string>

    <string name="adv_title">Объявления</string>
    <string name="adv_create_button">Добавить объявление</string>
    <string name="adv_create_load_error">При загрузке произошла ошибка</string>
    <string name="adv_create_reload">Повторить</string>
    <string name="adv_contacts">Способы связи:</string>

    <string name="adv_add_title">Создание объявления</string>
    <string name="adv_create_success_message">Ваше объявление успешно отправлено! В ближайшее время мы его рассмотрим и опубликуем.</string>
    <string name="adv_create_success_subtext">Если оно будет нарушать какие-то правила, то мы об этом сообщим по оставленным контактам.</string>

    <!-- Campus Map -->
    <string name="roadmap_navigation_error">Не удалось построить маршрут</string>
    <string name="roadmap_navigation">Построить маршрут</string>
    <string name="roadmap_steps">Пройти по шагам</string>
    <string name="roadmap_time">%1$s минут в пути</string>
    <string name="roadmap_distance">%1$s км.</string>
    <string name="roadmap_search_room">Название места</string>

    <string name="roadmap_steps_previous">Назад</string>
    <string name="roadmap_steps_next">Далее</string>
    <string name="roadmap_steps_finish">Завершить</string>


    <string name="marker_info_done">Выбрано</string>
    <string name="select_point_done">Готово</string>
    <string name="select_room_back">Назад</string>

    <string name="nav_title">Поиск маршрута</string>
    <string name="nav_desk">Вы можете построить маршрут по карте, прямо до аудитории</string>
    <string name="nav_a_title">Начало пути</string>
    <string name="nav_a_desk">Выберите начало маршрута</string>
    <string name="nav_b_title">Пункт назначения</string>
    <string name="nav_b_desk">Выберите пункт назначения</string>

    <string name="point_type_title">Добавление точки</string>
    <string name="point_type_map">Точка на карте</string>
    <string name="point_type_room">Аудитория из списка</string>


    <!-- Canteens Fragment -->
    <string name="canteens_title">Столовые и буфеты</string>

    <!-- Exam Fragment -->
    <string name="exams_title">Экзамены</string>
    <string name="exams_none_timetable">Расписание ваших экзаменов отсутствует</string>
    <string name="exams_select_group">Чтобы посмотреть расписание сессии, необходимо выбрать свою группу</string>
    <string name="exams_select_group_btn">Выбрать группу</string>

    <!-- Timetable Fragment -->
    <string name="timetable_title_current">Текущая неделя</string>
    <string name="timetable_title_other">Неделя №</string>
    <string name="timetable_now">Сегодня</string>
    <string-array name="timetable_days">
        <item>Воскресенье</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>
    <string name="timetable_next_week_title">На этой неделе у вас больше нет пар.</string>
    <string name="timetable_next_week_button">Перейти к следующей</string>

    <string name="timetable_dialog_previous_week">Предыдущая неделя</string>
    <string name="timetable_dialog_this_week_button">Текущая неделя</string>
    <string name="timetable_dialog_next_week_button">Следующая неделя</string>
    <string name="timetable_dialog_other_week_button">Другая неделя</string>
    <string name="timetable_week_other">Неделя %1$d</string>
    <string name="timetable_empty">На эту неделю расписания нет, мы ничего не нашли</string>
    <string name="timetable_select_week_number_title">Другая неделя</string>
    <string name="timetable_error">При загрузке произошла ошибка, показана офлайн версия</string>
    <string name="black_list_error">Извините, но вы в черном списке и вам нельзя смотреть расписание через это приложение</string>
    <string name="timetable_success">Расписание обновилось и будет доступно офлайн!</string>
    <string name="timetable_new_sem">Пришло новое расписание на начало учебного года! Название вашей группы могло измениться, по этому пожалуйста выберите её еще раз.</string>
    <string name="timetable_select_group">Чтобы увидеть расписание, нужно выбрать свою учебную группу</string>
    <string name="timetable_group">Выбранная группа:</string>
    <string name="timetable_online_link">Перейти к онлайн занятию</string>


    <!-- Settings Fragment -->
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_test_map">Тестовая карта</string>
    <string name="settings_info_card">ваши данные</string>
    <string name="settings_info_card_empty">Группа не выбрана</string>

    <string name="settings_select_group">Выбрать другую группу</string>
    <string name="settings_reload_timetable">Перезагрзить расписание</string>
    <string name="settings_reload_other">Перезагрузить данные о ВУЗе</string>
    <string name="settings_events_restore">Вернуть скрытые события</string>
    <string name="settings_support">Поддержка</string>
    <string name="settings_news">Новости приложения</string>
    <string name="settings_mai_link">Сайт МАИ</string>
    <string name="settings_about">О нас</string>

    <string name="settings_diagram_text">Устройство</string>
    <string name="settings_diagram_kb">%1$d KB</string>
    <string name="settings_app_id">ID устройства:</string>
    <string name="settings_description_title">Информация о приложении:</string>
    <string name="settings_description">Приложение МАИ, созданное, чтоб облегчить доступ к расписанию и другой информации. Все расписание загружается один раз и потом доступна без доступа в интернет.</string>
    <string name="settings_version_title">Версия и сборка:</string>
    <string name="settings_author_title">Наша команда:</string>
    <string name="settings_author1">Соляной Леонид / МАИ</string>
    <string name="settings_author2">Галина Асеева / МИРЭА</string>
    <string name="settings_device_id_description">Ваш идентификатор в нашей системе</string>

    <string name="settings_group_list">Быстрое переключение</string>
    <string name="settings_group_add_button">Добавить группу</string>
    <string name="settings_group_add_title">Добавление группы</string>
    <string name="settings_group_confirm_delete">Вы точно хотите удалить группу из быстрого доступа?</string>
    <string name="settings_group_confirm_delete_accept">Удалить</string>
    <string name="settings_group_confirm_delete_cancel">Отменить</string>
    <string name="settings_feedback_title">Сообщите нам об ошибке и помогите сделать приложение лучше для вас!</string>
    <string name="settings_feedback_email">Введите почту для обратной связи</string>
    <string name="settings_feedback_name">Как к вам обращаться?</string>
    <string name="settings_feedback_message">Опишите проблему с которой вы столкнулись</string>
    <string name="settings_feedback_send">Отправить</string>
    <string name="settings_feedback_toolbar">Поддержка</string>
    <string name="settings_feedback_success_text">Ваше обращение принято в обработку, и мы постраемся ответить на него как можно скорее</string>
    <string name="settings_feedback_success_button">Хорошо!</string>
    <string name="settings_info_students_text">Адрес:</string>
    <string name="settings_change_group">Выбранна новая группа</string>
    <string name="settings_remove_group">Группа удалена из быстрого доступа</string>
    <string name="settings_github">GitHub</string>
    <string name="settings_github_text">Нажмите на эту карточку, чтобы\nперейти к нашему репозиторию</string>


    <string name="settings_about_code">Открытый\nисходный код</string>
    <string name="settings_about_code_text">У нашего приложения открытый исходный код, который вы можете использовать в своих целях.</string>
    <string name="settings_about_team">Наша\nкоманда</string>
    <string name="settings_about_team_text">У нас небольшая, растущая команда, к которой может присоедениться любой желающий.</string>
    <string name="settings_feedback_response_title">Ваши обращения</string>
    <string name="settings_feedback_new_title">Новое обращение</string>
    <string name="settings_feedback_new_subtitle">Напишите, если у вас есть какие-то проблемы или предложения</string>
    <string name="settings_feedback_new_button">Поддержка</string>
    <string name="settings_feedback_empty">Тут будут вопросы, которые вы\nнапишите нам</string>Сообщение
    <string name="settings_feedback_answer_title">Сообщение</string>
    <string name="settings_feedback_response">Ответ поддержки</string>
    <string name="settings_feedback_waiting_response">Ответа еще нет</string>

    <string name="form_file_mandatory">Обязательный файл</string>

    <string name="like_success">Вы поставили лайк, спасибо за активность!</string>
    <string name="like_error">Вы уже поставили лайк</string>

    <string name="jutter">Jutter</string>
</resources>