<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrollingContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:clipChildren="false"
        >

            <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="?attr/actionBarItemBackground"
                    app:srcCompat="@drawable/ic_arrow_back"
                    android:tint="@color/colorPrimary"
                    android:layout_margin="8dp"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/settings_about_code"
                    android:layout_marginHorizontal="24dp"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/settings_about_code_text"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="24dp"
            />

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvGit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginHorizontal="24dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/colorBackgroundSecondary"
            >

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_gt"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_squares"
                        android:layout_gravity="end"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical"
                >

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_github"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="24sp"
                            android:fontFamily="@font/roboto_regular"
                    />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_github_text"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto_regular"
                    />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/settings_about_team"
                    android:layout_marginHorizontal="24dp"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/settings_about_team_text"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="24dp"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDevs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:nestedScrollingEnabled="false"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_marginVertical="16dp"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bottom_image"
                    android:layout_marginTop="24dp"
            />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
            layout="@layout/layout_loading"/>

</LinearLayout>