<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:cardCornerRadius="0dp">
        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBackground">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/settings_group_confirm_delete"
                android:textSize="18sp"
                android:layout_marginBottom="24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/ButtonSolid"
                    android:textColor="@color/colorTextWhite"
                    android:layout_marginEnd="16dp"
                    android:text="@string/settings_group_confirm_delete_cancel"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnAccept"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:elevation="0dp"
                    app:cardBackgroundColor="@color/colorBackground"
                    app:strokeColor="@color/colorPrimarySecondary"
                    app:strokeWidth="1dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">
                    <TextView
                        android:id="@+id/tvAction"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_group_confirm_delete_accept"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:background="@color/colorBackground"
                        android:fontFamily="@font/roboto_bold"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>