<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorBackgroundSecondary"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
        >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_feedback_answer_title"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_regular"
            />

            <TextView
                    android:id="@+id/tvAnswerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_feedback_new_title"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@color/colorTextLight"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
            >

                <ImageView
                        android:id="@+id/icStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_resp_no"
                />

                <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_feedback_response"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/roboto_regular"
                />

            </LinearLayout>

            <View
                    android:id="@+id/vDivider"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextSecondary"
            />

            <TextView
                    android:id="@+id/tvResponseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_feedback_new_title"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
            />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
